Fix padding and spacing

--- a/website/src/app/page.module.css
+++ b/website/src/app/page.module.css
@@ -45,7 +45,7 @@
 
 .Section3 .gridWrapper {
     grid-template-columns: repeat(auto-fit, minmax(40%, 1fr));
-    gap: 30px;
+    gap: 32px;
     margin-inline: 30px;
 }
 
@@ -88,12 +88,13 @@
 
 .Section5 .grants {
     display: flex;
-    gap: 30px;
+    gap: 32px;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     flex-wrap: wrap;
-    margin-top: 30px;
+    margin-top: 32px;
+    padding-inline: 32px
 }
 
 .Section5 .grantLogo {
